--- a/SQS/Customers.Consumer/Customers.Consumer.csproj
+++ b/SQS/Customers.Consumer/Customers.Consumer.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AWSSDK.SQS" Version="3.7.200.11" />
+    <PackageReference Include="MediatR" Version="12.1.1" />
   </ItemGroup>
 
 </Project>
