--- a/S3/S3Playground/S3Playground.csproj
+++ b/S3/S3Playground/S3Playground.csproj
@@ -18,4 +18,8 @@
       </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="AWSSDK.S3" Version="3.7.205.19" />
+    </ItemGroup>
+
 </Project>
